dev_ws/log/build_2021-10-12_18-52-28/yolo_ai/stderr.log
  File "/home/krishna/dev_ws/install/yolo_ai/lib/python3.8/site-packages/yolo_ai/publisher_member_function.py", line 36
    self.publisher_.publish(msg)
    ^
SyntaxError: invalid syntax

  File "/home/krishna/dev_ws/install/yolo_ai/lib/python3.8/site-packages/yolo_ai/test_return.py", line 1
    def mock_ai(var1, var2)
                          ^
SyntaxError: invalid syntax

